--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
             text-align: center;
             padding: 4rem 1.5rem;
             position: relative;
-            z-index: 10; /* Ensure hero content is above background circles */
+            z-index: 10;
+            margin-top: 1.5rem; /* Ensure hero content is above background circles */
         }
         .hero-title {
             font-size: 3rem;
@@ -173,6 +174,7 @@
             align-items: center;
             pointer-events: none; /* Allow clicks to pass through */
             z-index: 0; /* Behind all content */
+            overflow: hidden;
         }
 
         /* The wrapper that rotates all circles */
@@ -427,31 +429,153 @@
 
         /* Responsive adjustments */
         @media (max-width: 768px) {
-            body { padding-top: 56px; }
-            .navbar { padding: 0.5rem 0; }
-            .nav-container { padding: 0 1rem; }
-            .nav-logo img { height: 24px; } /* Adjust for mobile */
-            .nav-logo-text { font-size: 1.25rem; } /* Adjust for mobile */
-            .nav-links-desktop { display: none; }
-            .mobile-menu-button { display: block; }
+            body { 
+                padding-top: 56px; 
+                width: 100%;
+                overflow-x: hidden;
+            }
+            .navbar { 
+                padding: 0.5rem 0; 
+                width: 100%;
+            }
+            .nav-container { 
+                padding: 0 1rem; 
+                width: 100%;
+                justify-content: space-between;
+            }
+            .nav-logo img { 
+                height: 24px; 
+                margin-right: 0.25rem;
+            }
+            .nav-logo-text { 
+                font-size: 1.1rem; 
+            }
+            .nav-links-desktop { 
+                display: none; 
+            }
+            .mobile-menu-button { 
+                display: block; 
+            }
 
-            .hero-title { font-size: 2.25rem; }
-            .hero-subtitle { font-size: 1rem; }
-            /* Ensure responsive button padding is appropriate for pill shape */
-            .btn-gradient { padding: 0.7rem 1.75rem; font-size: 0.9rem; }
+            .hero-section {
+                padding: 1.5rem 1rem;
+                text-align: center;
+                width: 100%;
+                min-height: auto;
+            }
 
+            .hero-title { 
+                font-size: 1.75rem; 
+                width: 100%;
+                padding: 0 1rem;
+                margin-bottom: 0.75rem;
+                line-height: 1.3;
+            }
+            .hero-subtitle { 
+                font-size: 0.9rem; 
+                width: 100%;
+                padding: 0 1rem;
+                margin-bottom: 1.5rem;
+                line-height: 1.4;
+            }
 
-            .content-section { padding: 3rem 1rem; }
-            .section-heading { font-size: 1.75rem; }
-            .section-subheading { font-size: 1rem; }
+            .content-section { 
+                padding: 2rem 1rem; 
+                width: 100%;
+            }
+            .section-heading { 
+                font-size: 1.5rem; 
+                width: 100%;
+                padding: 0 1rem;
+                margin-bottom: 0.75rem;
+                line-height: 1.3;
+            }
+            .section-subheading { 
+                font-size: 0.9rem; 
+                width: 100%;
+                padding: 0 1rem;
+                margin-bottom: 1.5rem;
+                line-height: 1.4;
+            }
 
-            .signup-form-container { padding: 2rem; max-width: 90%;}
-            /* Adjust orbiting circles for smaller screens */
-            .orbiting-circle:nth-child(1) { transform: rotate(0deg) translateX(150px) rotate(0deg) translate(-50%, -50%); width: 120px; height: 120px; }
-            .orbiting-circle:nth-child(2) { transform: rotate(72deg) translateX(120px) rotate(-72deg) translate(-50%, -50%); width: 100px; height: 100px; }
-            .orbiting-circle:nth-child(3) { transform: rotate(144deg) translateX(180px) rotate(-144deg) translate(-50%, -50%); width: 140px; height: 140px; }
-            .orbiting-circle:nth-child(4) { transform: rotate(216deg) translateX(130px) rotate(-216deg) translate(-50%, -50%); width: 110px; height: 110px; }
-            .orbiting-circle:nth-child(5) { transform: rotate(288deg) translateX(160px) rotate(-288deg) translate(-50%, -50%); width: 130px; height: 130px; }
+            .signup-form-container { 
+                padding: 1.5rem 1rem; 
+                width: 90%;
+                margin: 0 auto;
+            }
+
+            .signup-form-container label {
+                font-size: 0.8rem;
+                margin-bottom: 0.25rem;
+            }
+
+            .signup-form-container input {
+                padding: 0.6rem 1rem;
+                font-size: 0.9rem;
+                margin-bottom: 1rem;
+            }
+
+            .btn-gradient { 
+                padding: 0.6rem 1.5rem; 
+                font-size: 0.9rem;
+                width: 100%;
+                max-width: 250px;
+                margin: 0 auto;
+                display: block;
+            }
+
+            .welcome-section {
+                padding: 1.5rem 1rem;
+                width: 100%;
+            }
+
+            .welcome-content {
+                padding: 1.5rem 1rem;
+                width: 90%;
+                margin: 0 auto;
+            }
+
+            .welcome-title {
+                font-size: 1.5rem;
+                width: 100%;
+                padding: 0 1rem;
+                margin-bottom: 0.75rem;
+                line-height: 1.3;
+            }
+
+            .welcome-message {
+                font-size: 0.9rem;
+                width: 100%;
+                padding: 0 1rem;
+                margin-bottom: 1.5rem;
+                line-height: 1.4;
+            }
+
+            .welcome-contact {
+                margin-top: 1.5rem;
+                padding-top: 1.5rem;
+            }
+
+            .welcome-contact p {
+                font-size: 0.8rem;
+                margin-bottom: 0.25rem;
+            }
+
+            .footer {
+                padding: 1.5rem 1rem;
+                width: 100%;
+                font-size: 0.8rem;
+                
+            }
+
+            .signup-form-footer {
+                margin-top: 1rem;
+                font-size: 0.8rem;
+            }
+
+            .signup-form-footer p {
+                margin-bottom: 0.5rem;
+            }
         }
 
         /* Add these new styles before the existing styles */
@@ -712,7 +836,7 @@
                         <button type="submit" class="btn-gradient">Create Account</button>
                     </div>
                     <div class="signup-form-footer">
-                        <p>Already have an account? <a href="#" onclick="event.preventDefault(); toggleForms('login');">Log In</a></p>
+                        <p>Already have an account? <br><a href="#" onclick="event.preventDefault(); toggleForms('login');">Log In</a></p>
                     </div>
                 </form>
 
