--- a/index.html
+++ b/index.html
@@ -24,11 +24,18 @@
             font-family: 'Poppins', sans-serif;
             background-color: #000000;
             color: #F5F5F7;
-            overflow-x: hidden; /* Hide horizontal scrollbar */
-            overflow-y: auto;
+             /* Hide horizontal scrollbar */
+         
             scroll-behavior: smooth;
             padding-top: 60px; /* Space for fixed navbar */
             position: relative; /* Needed for absolute positioning of orbs */
+        }
+
+        #mainContent {
+            overflow-x: hidden;
+            width: 100%;
+            position: relative;
+            min-height: 100vh;
         }
 
         /* Navigation Bar - Minimalist */
@@ -93,12 +100,14 @@
             top: 100%;
             left: 0;
             right: 0;
+            width: 100%; /* Added explicit width */
             background-color: rgba(25, 25, 25, 0.9);
             backdrop-filter: blur(10px) saturate(150%);
             -webkit-backdrop-filter: blur(10px) saturate(150%);
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
             padding: 1rem 0;
             z-index: 999;
+            box-sizing: border-box; /* Added to include padding in width calculation */
         }
         .mobile-menu a {
             display: block;
@@ -436,7 +445,7 @@
             }
             .navbar { 
                 padding: 0.5rem 0; 
-                width: 100%;
+                width: 100vw;
             }
             .nav-container { 
                 padding: 0 1rem; 
@@ -536,17 +545,18 @@
             }
 
             .welcome-title {
-                font-size: 1.5rem;
+                font-size: 1.2rem;
                 width: 100%;
                 padding: 0 1rem;
                 margin-bottom: 0.75rem;
                 line-height: 1.3;
+                text-align: center;
             }
 
             .welcome-message {
-                font-size: 0.9rem;
+                font-size: 0.5rem;
                 width: 100%;
-                padding: 0 1rem;
+                padding: 0 0.5rem;
                 margin-bottom: 1.5rem;
                 line-height: 1.4;
             }
