--- a/index.html
+++ b/index.html
@@ -748,14 +748,9 @@
 
 
     <div id="intro" style="position: fixed; inset: 0; background: black; z-index: 9999; display: flex; align-items: center; justify-content: center;">
-        <div class="loading-animation">
-            <div class="center-circle"></div>
-            <div class="loading-circle c1"></div>
-            <div class="loading-circle c2"></div>
-            <div class="loading-circle c3"></div>
-            <div class="loading-circle c4"></div>
-            <div class="loading-circle c5"></div>
-        </div>
+        <video id="introVideo" autoplay muted playsinline style="width: 100%; height: 100%; object-fit: cover;">
+            <source src="video.mp4" type="video/mp4">
+        </video>
     </div>
 
 
@@ -1091,6 +1086,7 @@ window.addEventListener('mousemove', (e) => {
   <script>
     const intro = document.getElementById('intro');
     const mainContent = document.getElementById('mainContent');
+    const introVideo = document.getElementById('introVideo');
 
     // Function to start the transition
     function startTransition() {
@@ -1099,6 +1095,7 @@ window.addEventListener('mousemove', (e) => {
             duration: 1,
             onComplete: () => {
                 intro.style.display = 'none';
+                introVideo.pause(); // Pause the video when transition is complete
             }
         });
 
@@ -1108,8 +1105,11 @@ window.addEventListener('mousemove', (e) => {
         });
     }
 
-    // Start the transition after 3 seconds
-    setTimeout(startTransition, 3000);
+    // Start the transition when the video ends
+    introVideo.addEventListener('ended', startTransition);
+
+    // Fallback: Start transition after 5 seconds if video doesn't end
+    setTimeout(startTransition, 5000);
   </script>
   
   
