--- a/cyrcl.html
+++ b/cyrcl.html
@@ -237,11 +237,40 @@
             transform: rotate(288deg) translateX(320px) rotate(-288deg) translate(-50%, -50%);
         }
 
-        #introVideo {
-  max-width: 100%;
-  max-height: 100%;
-}
+        #intro {
+            position: fixed;
+            inset: 0;
+            background: black;
+            z-index: 9999;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+        }
 
+        #introVideo {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+
+        @media (max-width: 768px) {
+            #intro {
+                aspect-ratio: 9/16;
+                width: 100%;
+                height: auto;
+                margin: 0 auto;
+            }
+            
+            #introVideo {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
 
         /* Content inside circles (simulated video/animation) - Static gradients for minimalism */
         .circle-content {
@@ -462,8 +491,11 @@
 
 
     <div id="intro" style="position: fixed; inset: 0; background: black; z-index: 9999; display: flex; align-items: center; justify-content: center;">
-        <video id="introVideo" src="particle.mp4" autoplay muted playsinline></video>
-      </div>
+        <video id="introVideo" autoplay muted playsinline>
+            <source src="video.mp4" media="(max-width: 768px)">
+            <source src="particle.mp4" media="(min-width: 769px)">
+        </video>
+    </div>
 
 
       <div id="mainContent" style="opacity: 0;">
