--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@
             <h1 class="hero-title gradient-text">Connect. Create. Cyrcl.</h1>
             <p class="hero-subtitle">The future of social interaction is here. Join Cyrcl and discover a new way to connect with your world.</p>
             <div class="hero-cta">
-                <button class="btn-gradient btn-hero-glow" href="https://www.apple.com/app-store/" target="_blank" >Get Started</button>
+                <a class="btn-gradient btn-hero-glow" href="https://www.apple.com/app-store/" target="_blank">Get Started</a>
             </div>
         </section>
 
