privacy and children

--- a/child-safety-policy.html
+++ b/child-safety-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - Cyrcl</title>
+    <title>Child Safety and Age Verification - Cyrcl</title>
     <link rel="icon" type="image/png" href="logo.png">
     <link rel="apple-touch-icon" href="logo.png" sizes="180x180">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -138,8 +138,7 @@
         }
 
         .contact-info {
-            margin-top: 3rem;
-            padding-top: 1.5rem;
+            margin-top: 2rem !important;
             border-top: 1px solid rgba(255, 255, 255, 0.1);
         }
 
@@ -149,15 +148,6 @@
         }
 
         .contact-info a:hover {
-            text-decoration: underline;
-        }
-
-        a {
-            color: #00AFFF !important;
-            text-decoration: none;
-        }
-
-        a:hover {
             text-decoration: underline;
         }
 
@@ -176,7 +166,7 @@
             }
 
             h1 {
-                font-size: 2.5rem !important;
+                font-size: 2rem !important;
                 margin-bottom: 1rem !important;
                 margin-top: -0.5rem !important;
             }
@@ -190,9 +180,6 @@
                 font-size: 1.5rem !important;
             }
         }
-
-
-        
     </style>
 </head>
 <body>
@@ -209,63 +196,65 @@
     </nav>
 
     <div class="content-container">
-        <h1>Terms of Service</h1>
-        <p class="effective-date">Effective Date: 20th January 2025</p>
+        <h1>Child Sexual Abuse & Exploitation (CSAE) Policy</h1>
+        <p class="effective-date">Last updated: January 5, 2025</p>
 
-        <h2>1. Acceptance of Terms</h2>
-        <p>By using Cyrcl ("the App"), you agree to these Terms of Service ("Terms"). If you do not agree, please do not use the App.</p>
+        <p class="intro">Cyrcl is committed to maintaining a safe, respectful, and protective environment for all users. This document outlines our unwavering stance against Child Sexual Abuse and Exploitation (CSAE), which includes the creation, circulation, or facilitation of Child Sexual Abuse Material (CSAM). Any breach of this policy will result in immediate action.</p>
 
-        <h2>2. Eligibility</h2>
-        <p>You must be at least 16 years old to use the App. By using the App, you represent that you meet this requirement.</p>
-
-        <h2>3. Account Registration</h2>
+        <h2>What is CSAE and CSAM</h2>
+        <p>Child Sexual Abuse and Exploitation (CSAE) refers to any act that harms, exploits, or endangers minors through sexual means. This includes, but is not limited to:</p>
         <ul>
-            <li>You must provide accurate and complete information during registration.</li>
-            <li>You are responsible for maintaining the confidentiality of your account credentials.</li>
+            <li>Grooming minors for sexual purposes</li>
+            <li>Sextortion of a child (e.g., using threats or blackmail to solicit sexual content from minors)</li>
+            <li>Child sex trafficking and its facilitation</li>
+            <li>Any attempt to sexualize or endanger a child online or offline</li>
+        </ul>
+        <p>Child Sexual Abuse Material (CSAM) includes any image, video, illustration, animation, or digitally created content that depicts minors involved in sexually explicit acts. Possession, sharing, or production of CSAM is illegal and condemned globally.</p>
+        <p>Cyrcl explicitly prohibits all content and conduct that sexualizes or exploits children in any form.</p>
+
+        <h2>Our Zero-Tolerance Policy</h2>
+        <p>Cyrcl enforces a strict and non-negotiable zero-tolerance policy regarding CSAE and CSAM:</p>
+        <ul>
+            <li>Accounts associated with CSAE or CSAM will be immediately deactivated or banned</li>
+            <li>Offending content will be removed without warning</li>
+            <li>We will report incidents to the appropriate authorities, including the National Center for Missing & Exploited Children (NCMEC) or equivalent global agencies</li>
+            <li>We fully cooperate with law enforcement in accordance with applicable legal frameworks</li>
+        </ul>
+        <p>There are no exceptions to this policy.</p>
+
+        <h2>Reporting Abuse on Cyrcl</h2>
+        <p>If you come across any behavior, messages, or media on Cyrcl that you believe involves CSAE or CSAM:</p>
+        <ul>
+            <li>Report it directly through the app via our in-app reporting feature, or</li>
+            <li>Email us at: <a href="mailto:support@cyrcl.life">support@cyrcl.life</a></li>
+        </ul>
+        <p>All reports are kept confidential and are reviewed immediately by our dedicated Trust & Safety team.</p>
+
+        <h2>Enforcement and Compliance</h2>
+        <p>To comply with international child protection standards and Google Play's CSAE policy requirements:</p>
+        <ul>
+            <li>This CSAE policy is publicly posted at: https://www.cyrcl.life/child-safety-policy</li>
+            <li>The policy references both CSAE and CSAM, and identifies Cyrcl app and developer by name as it appears on the Google Play listing</li>
+            <li>This policy is accessible from our app listing, Terms of Service, and website</li>
+            <li>We regularly evaluate and refine our safety policies to align with evolving best practices</li>
         </ul>
 
-        <h2>4. User Responsibilities</h2>
-        <p>You agree to:</p>
+        <h2>Safety Through Transparency</h2>
+        <p>Cyrcl collaborates with child safety professionals, nonprofit organizations, and relevant legal entities to:</p>
         <ul>
-            <li>Use the App only for lawful purposes.</li>
-            <li>Not engage in any activity that disrupts or interferes with the App.</li>
-            <li>Not attempt to access unauthorized areas of the App.</li>
+            <li>Monitor emerging risks to minors</li>
+            <li>Strengthen detection and response systems</li>
+            <li>Train our moderation and engineering teams in safety protocols</li>
         </ul>
+        <p>We believe in collective responsibility to keep digital spaces safe, especially for the most vulnerable.</p>
 
-        <h2>5. Intellectual Property</h2>
-        <p>All content and features of the App, including text, graphics, and logos, are owned by Cyrcl or its licensors. You may not reproduce, distribute, or create derivative works without our permission.</p>
-
-        <h2>6. Prohibited Activities</h2>
-        <p>You may not:</p>
-        <ul>
-            <li>Use the App for illegal or unauthorized purposes.</li>
-            <li>Harass, abuse, or harm other users.</li>
-            <li>Upload or share content that is offensive, defamatory, or violates intellectual property rights.</li>
-        </ul>
-
-        <h2>7. Termination</h2>
-        <p>We may suspend or terminate your account if you violate these Terms. You may also terminate your account at any time by contacting us.</p>
-
-        <h2>8. Limitation of Liability</h2>
-        <p>To the fullest extent permitted by law, Cyrcl shall not be liable for any indirect, incidental, or consequential damages arising from your use of the App.</p>
-
-        <h2>9. Governing Law</h2>
-        <p>These Terms are governed by and construed in accordance with the laws of England and Wales, without regard to conflict of law principles.</p>
-        <br>
-        <p>If you are a resident of a country where local consumer protection laws require different rights or procedures, those laws will apply to the extent required.</p>
-        <br>
-        <p>Any disputes arising out of or in connection with these Terms, including non-contractual matters, shall be subject to the non-exclusive jurisdiction of the courts of England and Wales, unless mandatory laws in your country of residence require otherwise.</p>
-
-        <h2>10. Child Safety Policy</h2>
-        <p>Cyrcl is committed to protecting minors and preventing exploitation. Our full Child Sexual Abuse & Exploitation (CSAE) Policy, including details on our zero-tolerance stance, reporting mechanisms, and enforcement procedures, is available at: <a href="child-safety-policy.html">https://www.cyrcl.life/child-safety-policy</a></p>
-
-        <h2>11. Changes to These Terms</h2>
-        <p>We may update these Terms from time to time. We will notify you of significant changes through the App or email.</p>
-
-        
         <div class="contact-info">
-            <p class ="ci">If you have any questions about these Terms, please contact us at:</p>
-            <p class ="ci">Email: <a href="mailto:support@cyrcl.life">support@cyrcl.life</a></p>
+            <h2>Contact & Reference</h2>
+            <p>Developer Name (Google Play): Cyrcl</p>
+            <p>App Name (Google Play): Cyrcl</p>
+            <p>Policy Link: https://www.cyrcl.com/child-safety-policy</p>
+            <p>Trust & Safety Contact: <a href="mailto:support@cyrcl.com">support@cyrcl.com</a></p>
+            <p>If you have questions about this policy or would like additional guidance, please contact our Trust & Safety team.</p>
         </div>
     </div>
 </body>
