--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
                 <span class="nav-logo-text">Cyrcl</span>
             </div>
             <div class="nav-links-desktop hidden md:flex">
-                <a href="about_us.html">About Us</a>
+                <a href="about-us.html">About Us</a>
                 <a href="#signup" onclick="event.preventDefault(); toggleForms('signup'); scrollToSignup();">Get Updates</a>
                 <a href="#signup" onclick="event.preventDefault(); toggleForms('login'); scrollToSignup();">Clear Account</a>
             </div>
@@ -1008,7 +1008,7 @@
             </button>
         </div>
         <div class="mobile-menu" id="mobileMenu">
-            <a href="about_us.html">About Us</a>
+            <a href="about-us.html">About Us</a>
             <a href="#signup" onclick="event.preventDefault(); toggleForms('signup'); scrollToSignup();">Get Updates</a>
             <a href="#signup" onclick="event.preventDefault(); toggleForms('login'); scrollToSignup();">Clear Account</a>
         </div>
@@ -1091,7 +1091,7 @@
                 <span class="footer-divider">•</span>
                 <a href="terms.html">Terms of Service</a>
                 <span class="footer-divider">•</span>
-                <a href="child_safety.html">Child Safety Policy</a>
+                <a href="child-safety-policy.html">Child Safety Policy</a>
                 <span class="footer-divider">•</span>
                 <a href="mailto:support@cyrcl.life" class="contact-link">Contact</a>
             </div>
