--- a/privacy.html
+++ b/privacy.html
@@ -32,6 +32,7 @@
             padding: 0 1.5rem;
             display: flex;
             align-items: center;
+            justify-content: space-between;
         }
 
         .nav-logo {
@@ -49,6 +50,24 @@
             font-size: 1.25rem;
             font-weight: 700;
             color: #FFFFFF;
+        }
+
+        .back-button {
+            display: none;
+            color: #FFFFFF;
+            text-decoration: none;
+            padding: 0.5rem;
+            transition: opacity 0.2s ease;
+        }
+
+        .back-button img {
+            width: 24px;
+            height: 24px;
+            filter: invert(1);
+        }
+
+        .back-button:hover {
+            opacity: 0.8;
         }
 
         .content-container {
@@ -71,46 +90,56 @@
         h2 {
             font-size: 1.75rem !important;
             font-weight: 700;
-            margin: 2.5rem 0 1.25rem;
+            margin: 3.5rem 0 1.5rem;
             color: #FFFFFF;
             letter-spacing: -0.01em;
+            margin-top: 3.0rem !important;
         }
 
         h3 {
             font-size: 1.5rem !important;
             font-weight: 600;
-            margin: 1.75rem 0 1rem;
+            margin: 2.5rem 0 1.25rem;
             color: #FFFFFF;
         }
 
         p {
-            margin-bottom: 1.25rem;
+            margin-bottom: 1.5rem;
             color: #E0E0E0;
             font-size: 1.05rem;
             line-height: 1.7;
         }
 
         ul {
-            list-style-type: disc;
-            margin: 1.25rem 0 1.25rem 1.5rem;
+            list-style-type: none;
+            margin: 1.5rem 0 2rem 1.5rem;
         }
 
         li {
-            margin-bottom: 0.75rem;
+            margin-bottom: 1rem;
             color: #E0E0E0;
             font-size: 1.05rem;
             line-height: 1.7;
+            position: relative;
+            padding-left: 1.5rem;
+        }
+
+        li:before {
+            content: "•";
+            position: absolute;
+            left: 0;
+            color: #00AFFF;
         }
 
         .effective-date {
             color: #A0A0A5;
             font-size: 1rem;
-            margin-bottom: 2.5rem;
+            margin-bottom: 2rem;
         }
 
         .contact-info {
-            margin-top: 2rem;
-            padding-top: 1rem;
+            margin-top: 3rem;
+            padding-top: 1.5rem;
             border-top: 1px solid rgba(255, 255, 255, 0.1);
         }
 
@@ -129,12 +158,23 @@
                 padding: 1.5rem;
             }
 
+            .back-button {
+                display: block;
+            }
+
+            p {
+                margin-top: 1rem !important;
+            }
+
             h1 {
-                font-size: 4rem !important;
+                font-size: 2.5rem !important;
+                margin-bottom: 1rem !important;
+                margin-top: -0.5rem !important;
             }
 
             h2 {
                 font-size: 1.75rem !important;
+                margin-top: 1rem !important;
             }
 
             h3 {
@@ -149,6 +189,9 @@
             <a href="index.html" class="nav-logo">
                 <img src="cyrcllogo.png" alt="Cyrcl Logo">
                 <span class="nav-logo-text">Cyrcl</span>
+            </a>
+            <a href="index.html" class="back-button">
+                <img src="back.png" alt="Back">
             </a>
         </div>
     </nav>
