--- a/index.html
+++ b/index.html
@@ -435,6 +435,14 @@
         .glowing-orb.orb4 { width: 350px; height: 350px; top: 5%; left: 80%; animation-delay: -5s; }
         .glowing-orb.orb5 { width: 280px; height: 280px; bottom: 0%; left: 0%; animation-delay: -15s; }
 
+        @media (max-width: 768px) {
+            .glowing-orb.orb1 { width: 150px; height: 150px; }
+            .glowing-orb.orb2 { width: 200px; height: 200px; }
+            .glowing-orb.orb3 { width: 125px; height: 125px; }
+            .glowing-orb.orb4 { width: 175px; height: 175px; }
+            .glowing-orb.orb5 { width: 140px; height: 140px; }
+        }
+
         @keyframes drift-orb {
             0% { transform: translate(0px, 0px) rotate(0deg); }
             25% { transform: translate(20px, -30px) rotate(45deg); }
