--- a/index.html
+++ b/index.html
@@ -1010,6 +1010,7 @@
                 <a href="about-us.html">About Us</a>
                 <a href="#signup" onclick="event.preventDefault(); toggleForms('signup'); scrollToSignup();">Get Updates</a>
                 <a href="#signup" onclick="event.preventDefault(); toggleForms('login'); scrollToSignup();">Clear Account</a>
+                <a href="#" onclick="event.preventDefault(); window.scrollTo({top: 0, behavior: 'smooth'});">Download</a>
             </div>
             <button class="mobile-menu-button md:hidden">
                 &#9776;
@@ -1019,6 +1020,7 @@
             <a href="about-us.html">About Us</a>
             <a href="#signup" onclick="event.preventDefault(); toggleForms('signup'); scrollToSignup();">Get Updates</a>
             <a href="#signup" onclick="event.preventDefault(); toggleForms('login'); scrollToSignup();">Clear Account</a>
+            <a href="#" onclick="event.preventDefault(); window.scrollTo({top: 0, behavior: 'smooth'});">Download</a>
         </div>
     </nav>
 
