--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
             align-items: center;
         }
         .nav-logo img {
-            height: 80px; /* Adjust as needed */
+            height: 32px; /* Increased from 24px */
             width: auto;
-            margin-right: 0.5rem;
+            margin-right: 0.5rem; /* Adjusted from 0.25rem */
             margin-bottom: 0.5rem; /* Space between image and text */
         }
         .nav-logo-text {
-            font-size: 1.5rem; /* Adjust size as needed */
+            font-size: 1.3rem; /* Increased from 1.1rem */
             font-weight: 700;
             color: #FFFFFF;
         }
@@ -670,11 +670,12 @@
                 justify-content: space-between;
             }
             .nav-logo img { 
-                height: 24px; 
-                margin-right: 0.25rem;
+                height: 32px; /* Increased from 24px */
+                margin-right: 0.5rem;
+                margin-top: 0.25rem; /* Adjusted from 0.25rem */
             }
             .nav-logo-text { 
-                font-size: 1.1rem; 
+                font-size: 1.3rem; /* Increased from 1.1rem */
             }
             .nav-links-desktop { 
                 display: none; 
